# my_api

./: .env.example  .gitignore  README.md  alembic.ini  check_grants.py  create_tables.py  database.py  dockerfile  gunicorn.conf.py  main.py  models.py  pyproject.toml  requirements.txt  simple_test.py  simple_test_no_konlpy.py  test_bge_m3.py  test_gguf_kiwi.py  test_gguf_only.py  test_improved_kiwi.py
migrations/: README.md  env.py
migrations/versions/: 6aa5de1290fe_rename_smallstep_columns_to_snake_case.py  a9bd4c354db9_v2_schema_overhaul.py
prompts/: __init__.py  feedback.py  goal_analysis.py  llm_analysis.py
router/lotto/: lotto.py  lotto_schema.py
router/smallstep/: __init__.py  activities.py  debug_lines.txt  fix_encoding.py  game_data.py  goals.py  goals.py.bak  keywords.py  llm.py  onboarding.py  phases.py  search.py  smallstep.py  stats.py  system.py  tasks.py  users.py  weekly_plans.py
schemas/smallstep/: __init__.py  activities.py  game_data.py  goals.py  llm.py  phases.py  stats.py  tasks.py  users.py  weekly_plans.py
scripts/: add_columns.sql  add_foreign_key_to_templates.sql  create_template_skeletons.py  insert_goal_templates.sql
services/: __init__.py  embedding_service.py  gamification.py  keyword_extractor.py  model_manager.py  search_service.py  task_state_machine.py  weekly_scheduler.py
services/ai/: __init__.py  client.py  phase_generator.py  prompts.py  schemas.py  weekly_planner.py
services/core/: __init__.py  cached_plan_service.py  goal_validation_service.py
services/filtering/: __init__.py  (+3 more)
tests/: test_embedding_service.py
(+6 files in other folders)
